fixin' stuff up

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head> 
         <meta charset="utf-8">
         <meta name= "viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="decription" content="A second try at this entry level HTML class.">
+        <meta name="author" content="Jacob Atkinson">
         <title>JACOB KELLY ATKINSON | WDD 130</title>
     </head>
     <body>
@@ -18,7 +20,13 @@
         <main>
             <h1>JACOB KELLY ATKINSON | WD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Jacob Atkinson" width="200">
-            <p>Hello, my name is Jacob Atkinson. I am from Billings Montana and I currently live in the Black Hills of South Dakota. </p>
+            <p>Hello, my name is Jacob Atkinson. I am from Billings Montana. I currently live in the Black Hills of South Dakota. </p>
+
+            <aside>
+                <h2>Montana</h2>
+                <img src="images/montana.jpg" width="auto" height="200">
+                <p>Montana, a sparsely populated western U.S. state, is known for its stunning natural landscapes, including mountains, plains, and national parks like Glacier and Yellowstone</p>
+            </aside>
         </main>
     
    
