--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <HTML lang="en-US"> 
     <head> 
+        <link rel="stylesheet" href="styles/styles.css">
         <meta charset="utf-8">
         <meta name= "viewport" content="width=device-width, initial-scale=1.0">
         <meta name="decription" content="A second try at this entry level HTML class.">
