--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
         <main>
             <h1>JACOB KELLY ATKINSON | WD 130</h1>
-            <img src="images/profile.jpg" alt="Hello, my name is Jacob Atkinson" >
+            <img src="images/profile.jpg" width= 150px  alt="Hello, my name is Jacob Atkinson" >
             <p>Hello, my name is Jacob Atkinson. I am from Billings Montana. I currently live in the Black Hills of South Dakota. </p>
 
             <aside>
                 <h2>Montana</h2>
-                <img src="images/montana.jpg" >
+                <img src="images/montana.jpg" width= 150px alt="Beautiful montana mountains.">
                 <p>Montana, a sparsely populated western U.S. state, is known for its stunning natural landscapes, including mountains, plains, and national parks like Glacier and Yellowstone</p>
             </aside>
         </main>
