--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<HTML lang="en-US"> 
+<HTML lang="EN-US"> 
     <head> 
         <link rel="stylesheet" href="styles/styles.css">
         <meta charset="utf-8">
-        <meta name= "viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="decription" content="A second try at this entry level HTML class.">
+        <meta name= "viewport" content="width=device-width">
+        <meta name="decription" content="A second try at this entry level HTML class, sleepy, dinosaur, plastic sharpie, shark, words, many many words.">
         <meta name="author" content="Jacob Atkinson">
         <title>JACOB KELLY ATKINSON | WDD 130</title>
     </head>
