--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <a href="#">HOME</a>
             <a href="WWR/">WHITE  WATER RAFTING SITEPLAN</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="https://www.linkedin.com/in/jacob-k-atkinson/">Linkedin Profile</a>
+            <a href="https://www.facebook.com/superairjake"> Facebook Profile</a>
         </nav>
         </header>
 
@@ -23,16 +25,21 @@
             <img src="images/profile.jpg" width= 150px  alt="Hello, my name is Jacob Atkinson" >
             <p>Hello, my name is Jacob Atkinson. I am from Billings Montana. I currently live in the Black Hills of South Dakota. </p>
 
-            <aside>
+            <aside class="box">
                 <h2>Montana</h2>
                 <img src="images/montana.jpg" width= 150px alt="Beautiful montana mountains.">
                 <p>Montana, a sparsely populated western U.S. state, is known for its stunning natural landscapes, including mountains, plains, and national parks like Glacier and Yellowstone</p>
             </aside>
+            <u1 class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/billings-montana-temple?lang=eng" target="_blank">Billings, MT Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/bismarck-north-dakota-temple?lang=eng" target="_blank">Bismark, ND Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/ogden-utah-temple?lang=eng" target="_blank">Ogden, UT Temple</a></li>
+            </u1>
         </main>
     
    
         <footer>
-            <p>©️2023 Jacob Atkinson SD, USA </p>
+            <p>©️10/10/2023 Jacob Atkinson SD, USA </p>
         </footer>
     </body>  
 </HTML>
