--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
-<html lang="en-US"> 
-    <head> 
-        <link rel="stylesheet" href="styles/styles.css">
-        <meta charset="utf-8">
-        <meta name= "viewport"content="width=device-width,initial-scale=1.0">
-        <meta name="decription" content="A second try at this entry level HTML class, sleepy, dinosaur, plastic sharpie, shark, words, many many words.">
-        <meta name="author" content="Jacob Atkinson">
-        <title>JACOB KELLY ATKINSON | WDD 130</title>
-    </head>
-    <body>
-
-        <header>
+<html lang="en-US">
+<head>
+    <link rel="stylesheet" href="styles/styles.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A second try at this entry level HTML class, sleepy, dinosaur, plastic sharpie, shark, words, many many words.">
+    <meta name="author" content="Jacob Atkinson">
+    <title>JACOB KELLY ATKINSON | WDD 130</title>
+</head>
+<body>
+    <header>
         <nav>
             <a href="#">HOME</a>
-            <a href="WWR/">WHITE  WATER RAFTING SITEPLAN</a>
+            <a href="WWR/">WHITE WATER RAFTING SITEPLAN</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <a href="https://www.linkedin.com/in/jacob-k-atkinson/">Linkedin Profile</a>
-            <a href="https://www.facebook.com/superairjake"> Facebook Profile</a>
+            <a href="https://www.linkedin.com/in/jacob-k-atkinson/" target="_blank">Linkedin Profile</a>
+            <a href="https://www.facebook.com/superairjake" target="_blank">Facebook Profile</a>
         </nav>
-        </header>
+    </header>
 
-        <main>
-            <h1>JACOB KELLY ATKINSON | WD 130</h1>
-            <img src="images/profile.jpg" width= 150px alt="Hello, my name is Jacob Atkinson" >
-            <p>Hello, my name is Jacob Atkinson. I am from Billings Montana. I currently live in the Black Hills of South Dakota. </p>
+    <main>
+        <h1>JACOB KELLY ATKINSON | WD 130</h1>
+        <img src="images/profile.jpg" width="150" alt="Hello, my name is Jacob Atkinson">
+        <p>Hello, my name is Jacob Atkinson. I am from Billings, Montana. I currently live in the Black Hills of South Dakota.</p>
 
-            <aside class="box">
-                <h2>Montana</h2>
-                <img src="images/montana.jpg" width= 150px alt="Beautiful montana mountains.">
-                <p>Montana, a sparsely populated western U.S. state, is known for its stunning natural landscapes, including mountains, plains, and national parks like Glacier and Yellowstone</p>
-            </aside>
-            <u1 class="box">
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/billings-montana-temple?lang=eng" target="_blank">Billings, MT Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/bismarck-north-dakota-temple?lang=eng" target="_blank">Bismark, ND Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/ogden-utah-temple?lang=eng" target="_blank">Ogden, UT Temple</a></li>
-            </u1>
-        </main>
-    
-   
-        <footer>
-            <p>©️10/10/2023 Jacob Atkinson SD, USA </p>
-        </footer>
-    </body>  
-</HTML>
+        <aside class="box">
+            <h2>Montana</h2>
+            <img src="images/montana.jpg" width="150" alt="Beautiful Montana mountains.">
+            <p>Montana, a sparsely populated western U.S. state, is known for its stunning natural landscapes, including mountains, plains, and national parks like Glacier and Yellowstone.</p>
+        </aside>
+
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/billings-montana-temple?lang=eng" target="_blank" rel="noopener">Billings, MT Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/bismarck-north-dakota-temple?lang=eng" target="_blank" rel="noopener">Bismarck, ND Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/ogden-utah-temple?lang=eng" target="_blank" rel="noopener">Ogden, UT Temple</a></li>
+        </ul>
+    </main>
+
+    <footer>
+        <p>&copy; 10/10/2023 Jacob Atkinson SD, USA</p>
+    </footer>
+</body>
+</html>
