--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="styles/your-styles.css"> 
 <head>
+    <link rel="stylesheet" href="C:\Users\Super\OneDrive\School\pathways_23\WDD_130\wdd130\styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Adventures</title>
@@ -36,17 +36,17 @@
         <section id="employee-profiles">
             <h2>Employee Profiles</h2>
            
-            <div class="Kyle Elyk">
+            <div class="employee">
                 <img src="images/employee1.jpg" alt="Employee 1">
-                <p>Kyle Elyk- Guide</p>
+                <p>Kyle Elyk - Guide</p>
             </div>
-            <div class="Dave Evad">
+            <div class="employee">
                 <img src="images/employee2.jpg" alt="Employee 2">
-                <p>Dave Evad- Instructor</p>
+                <p>Dave Evad - Instructor</p>
             </div>
-            <div class="Randall Ladnar">
+            <div class="employee">
                 <img src="images/employee3.jpg" alt="Employee 3">
-                <p>Randall Ladnar- Coordinator</p>
+                <p>Randall Ladnar - Coordinator</p>
             </div>
         </section>
 
@@ -81,8 +81,7 @@
 
                 <button type="submit">Submit</button>
             </form>
-            </section>
-        </div>
+        </section>
     </main>
 
     <footer>
