--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="C:\Users\Super\OneDrive\School\pathways_23\WDD_130\wdd130\styles.css">
+    <link rel="stylesheet" href="C:\Users\Super\OneDrive\School\pathways_23\WDD_130\wdd130\wwr\styles\rafting.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Adventures</title>
