--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -53,33 +53,45 @@
         <section id="contact-form">
             <h2>Contact Us</h2>
             <form action="submit.php" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
 
-                <label for="email">Email Address:</label>
-                <input type="email" id="email" name="email" required>
+                <div class="form-group">
+                    <label for="email">Email Address:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
 
-                <label>Purpose of Message:</label>
-                <div class="radio-group">
+                <div class="form-group">
+                    <label>Purpose of Message:</label>
+                    <div class="radio-group">
+                        <label>
+                            <input type="radio" name="purpose" value="General Inquiry"> General Inquiry
+                        </label>
+                        <label>
+                            <input type="radio" name="purpose" value="Reservation Question"> Reservation Question
+                        </label>
+                        <label>
+                            <input type="radio" name="purpose" value="Website Suggestion"> Website Suggestion
+                        </label>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+
+                <div class="form-group">
                     <label>
-                        <input type="radio" name="purpose" value="General Inquiry"> General Inquiry
-                    </label>
-                    <label>
-                        <input type="radio" name="purpose" value="Reservation Question"> Reservation Question
-                    </label>
-                    <label>
-                        <input type="radio" name="purpose" value="Website Suggestion"> Website Suggestion
+                        <input type="checkbox" name="subscribe" value="yes"> Please subscribe me to the monthly newsletter
                     </label>
                 </div>
 
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-
-                <label>
-                    <input type="checkbox" name="subscribe" value="yes"> Please subscribe me to the monthly newsletter
-                </label>
-
-                <button type="submit">Submit</button>
+                <div class="form-group">
+                    <button type="submit">Submit</button>
+                </div>
             </form>
         </section>
     </main>
